--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,20 +15,27 @@ services:
     image: weblucis
     container_name: weblucis_container
 
+  # db:
+  #   image: postgis/postgis:16-3.4
+  #   container_name: postgis_container
+  #   restart: always
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: 151010
+  #     POSTGRES_DB: template_postgis
+  #     POSTGRES_HOST_AUTH_METHOD: trust
+  #   ports:
+  #     - "5432:5432"
+  #   volumes:
+  #     - ./db:/docker-entrypoint-initdb.d/
+  #     - weblucis_db_volume:/var/lib/postgresql/data/
   db:
-    image: postgis/postgis:16-3.4
-    container_name: postgis_container
+    container_name: weblucis_db_container
+    image: ronnieosx/weblucis_db:beta
+    platform: linux/amd64
     restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 151010
-      POSTGRES_DB: template_postgis
-      POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - "5432:5432"
-    volumes:
-      - ./db:/docker-entrypoint-initdb.d/
-      - weblucis_db_volume:/var/lib/postgresql/data/
 
 volumes:
   weblucis_db_volume:
