--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - output_db
     links:
       - db:db
+      - output_db:output_db
     volumes:
       - ./WebLUCIS/:/app/WebLUCIS/
 
@@ -19,7 +21,7 @@ services:
 #     build:
 #       context: .
 #       dockerfile: Dockerfile.db
-    image: ronnieosx/weblucis_db:beta
+    image: ronnieosx/weblucis_db:beta12.8.24
     platform: linux/amd64
     restart: always
 #    environment:
@@ -33,6 +35,14 @@ services:
 #      - ./data:/data
 #      - weblucis_db_volume:/var/lib/postgresql/data/
 
-
+  output_db:
+      container_name: weblucis_output_db_container
+      build:
+        context: .
+        dockerfile: Dockerfile.op
+      platform: linux/amd64
+      restart: always
+      ports:
+        - "5433:5432"
 #volumes:
 #  weblucis_db_volume:
